optimization and bug fixes

--- a/config/car_config.ini
+++ b/config/car_config.ini
@@ -1,29 +1,29 @@
 [car]
 # Identity
-name = MyCar
+name = Testing
 
 # Physics
 # max_speed: top speed in abstract units. With SPEED_SCALE=20, speed 10 ~ 200 px/sec
-max_speed = 100
+max_speed = 35
 # acceleration: how fast speed increases per second. 4.0 → reaches max in ~2.5 sec
-acceleration = 100
+acceleration = 4
 # brake_force: how fast the car decelerates when braking
-brake_force = 6
+brake_force = 2.5
 # rotation_speed: turning rate in radians per second
 rotation_speed = 5
 
 # Drift
-drift_enabled = False
-grip = 0.7
+drift_enabled = True
+grip = 0.3
 
 # Sensors (raycasts)
 # ray_angles: comma-separated angles in degrees (0 = forward, negative = left, positive = right)
 ray_angles = -90, -45, 0, 45, 90
-ray_length = 200
+ray_length = 350
 
 # Appearance
 car_image = assets/default_car.png
 
 # Training timing
 max_ticks = 2000
-stall_timeout = 200
+stall_timeout = 150
