readme + demo car + demo map

--- a/config/car_config.ini
+++ b/config/car_config.ini
@@ -1,16 +1,16 @@
 [car]
 # Identity
-name = Testing
+name = Demo
 
 # Physics
 # max_speed: top speed in abstract units. With SPEED_SCALE=20, speed 10 ~ 200 px/sec
-max_speed = 35
+max_speed = 50
 # acceleration: how fast speed increases per second. 4.0 → reaches max in ~2.5 sec
-acceleration = 4
+acceleration = 200
 # brake_force: how fast the car decelerates when braking
-brake_force = 2.5
+brake_force = 200
 # rotation_speed: turning rate in radians per second
-rotation_speed = 5
+rotation_speed = 10
 
 # Drift
 drift_enabled = True
@@ -18,7 +18,7 @@ grip = 0.3
 
 # Sensors (raycasts)
 # ray_angles: comma-separated angles in degrees (0 = forward, negative = left, positive = right)
-ray_angles = -90, -45, 0, 45, 90
+ray_angles = -90, -60, -30, 0, 30, 60, 90
 ray_length = 350
 
 # Appearance
